# crpp

./: main.py  pyproject.toml
models/: bitcoin_4h_rf.joblib  bitcoin_4h_rf_scaler.joblib  bitcoin_4h_xgb.joblib
pages/: 1_Market_Overview.py  2_Token_Comparison.py  3_Technical_Analysis.py  4_News.py  5_Whitepaper_Analysis.py  6_ML_Price_Prediction.py
utils/: analysis.py  api.py  constants.py  ml_models.py  openai_helper.py  styles.py  visualization.py
