[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "openai>=1.65.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "plotly>=6.0.0",
    "prophet>=1.1.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.1",
    "xgboost>=2.1.4",
]
